--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -5,7 +5,8 @@
 #heroInfo {
     margin-top: 20pt;
     padding: 20pt 30pt;
-    width: max-content;
+    /* width: max-content;
+    max-width: 600pt; */
     border-style: solid;
     border-width: 2;
     border-color: grey;
